# antfarm

./: .gitignore  .ninja_log  CMakeLists.txt  Makefile  README.md  antfarm.cpp  ants.cpp  ants.hpp  ants_test.cpp  app_state.cpp  app_state.hpp  app_state_test.cpp  drawing.cpp  drawing.hpp  geometry.hpp  grids.cpp  grids.hpp  grids_test.cpp  keyboard.cpp  keyboard.hpp  palette.cpp  palette.hpp  palette_test.cpp  rules.cpp  rules.hpp  rules_test.cpp  scene.cpp  timer.cpp  timer.hpp
cmake/: FindRaylib.cmake
palettes/: monochrome.conf  palette_ten.conf  palette_twenty.conf
src/: CMakeLists.txt  antfarm.cpp  app_state.cpp  app_state.hpp  app_state_test.cpp  config.hpp  drawing.cpp  drawing.hpp  geometry.cpp  geometry_test.cpp  keyboard.cpp  mouse.cpp  mouse.hpp  palette.cpp  palette.hpp  palette_test.cpp  rules.cpp  rules_test.cpp  scene.cpp  scene.hpp  timer.cpp
